# Geomagic_Touch_ROS_Drivers

./: .gitignore  README.md  omni.rosinstall
bilateral/: CMakeLists.txt  README.md  package.xml
bilateral/include/bilateral/: bilateral.hpp
bilateral/launch/: dual.launch
bilateral/scripts/: calc_controller.m  calc_controller.sh
bilateral/src/: bilateral.hpp  master.cpp  master.hpp  slave.cpp  slave.hpp
omni_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdep.yaml
omni_common/dummyraw1394/: Makefile  initialize_device.sh  initialize_haptic_device.bash  raw1394.c
omni_common/launch/: dual_phantom.launch  omni.launch  omni.rviz  omni_state.launch
omni_common/src/: omni.cpp  omni_state.cpp
omni_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
omni_description/meshes/: base.stl  lower_arm.stl  pen.stl  tip.stl  torso.stl  upper_arm.stl  wrist.stl
omni_description/urdf/: omni.robot.xml  omni.urdf
omni_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
omni_msgs/msg/: OmniButtonEvent.msg  OmniFeedback.msg  OmniState.msg
