<package>
  <name>bilateral</name>
  <description>
     ROS Nodes for Sensable Phantom Omni devices.
  </description>
  
  <version>0.1.0</version>
  <maintainer email="daiki.milky.kinako@gmail.com">Daiki Kusuyama</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bullet</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>omni_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>omni_description</run_depend>
  <run_depend>omni_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend> 
  
</package>


