<package format="2">
  <name>bilateral</name>
  <version>0.1.0</version>
  <description>The bilateral package</description>
  <maintainer email="daiki.milky.kinako@gmail.com">Daiki Kusuyama</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>omni_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>


